# delphi-devkit

./: CHANGELOG.md  LICENSE  NOTICE.txt  README.md  esbuild.js  package-lock.json  package.json
.github/workflows/: publish_extension.yml
config/: ddk_formatter.config
config/iconThemes/: ddk-file-icons.json
config/languages/grammar/: compiler-output.json
server/: Cargo.toml
server/src/: lsp_types.rs  main.rs
server/src/format/: mod.rs
server/src/format/presets/: ddk_formatter.config
server/src/projects/: changes.rs  compiler.rs  compiler_config.rs  compilers.rs  diag.rs  file_watch.rs  group_project.rs  mod.rs  project_data.rs  workspace.rs
server/src/projects/presets/: default_compilers.ron
server/src/utils/: document.rs  mod.rs
src/: commands.ts  constants.ts  extension.ts  runtime.ts  types.ts  utils.ts
src/db/: databaseController.ts  datasource.ts  entities.ts  restorable.ts
src/delphiProjects/: DelphiProject.ts  DelphiProjectTreeItem.ts  DpkFile.ts  DprFile.ts  DprojFile.ts  ExecutableFile.ts  IniFile.ts  README.md  benchmark.ts  index.ts  provider.ts  types.ts  utils.ts
src/dfm/: commands.ts  feature.ts
src/dfmLanguageSupport/: provider.ts
src/dfmSwap/: command.ts
src/dprExplorer/: provider.ts
src/formatter/: commands.ts  feature.ts  formatter.ts
src/projects/: commands.ts  feature.ts
src/test/: delphiProjectUtils.test.ts  extension.test.ts  projectDiscovery.test.ts  projectLoader.test.ts
src/typings/: index.ts
vscode_extension/: package-lock.json  package.json
vscode_extension/src/: client.ts  commands.ts  constants.ts
(+36 files in other folders)
