[package]
name = "ddk-server"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.100"
dirs = "6.0.0"
fslock = "0.2.1"
lazy_static = "1.5.0"
notify = "8.2.0"
regex = "1.12.2"
ron = "0.12.0"
roxmltree = "0.21.1"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
substring = "1.4.5"
tokio = { version = "1.49.0", features = ["io-std", "macros", "rt-multi-thread", "tokio-macros"] }
tower-lsp = "0.20.0"
